# query

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.devcontainer/cpp/: devcontainer.json
.github/workflows/: codeql-dotnet.yaml  codeql-java.yaml  codeql-javascript.yaml  release-npm.yml  release-nuget.yaml  release-rubygem.yaml  release-site.yml  site.yml  test-dotnet.yml  test-java.yaml  test-java.yml  test-javascript.yaml  test-javascript.yml  test-ruby.yaml  test-ruby.yml  test-testdata.yaml  test-testdata.yml
cpp/: CMakeLists.txt  CMakePresets.json
cpp/cmake/: dependencies.cpm.cmake
cpp/include/cucumber/query/: Query.hpp
cpp/src/query/: Query.cpp
cpp/test/: CMakeLists.txt  TestQuery.cpp
dotnet/: .gitignore  Cucumber.Query.sln  Cucumber.Query.slnx  Directory.Build.props  LICENSE  Query.sln
dotnet/Cucumber.Query/: Cucumber.Query.csproj  Lineage.cs  LineageReducerAscending.cs  LineageReducerDescending.cs  NamingCollector.cs  NamingStrategy.cs  Query.cs  Repository.cs  TimestampComparer.cs
dotnet/Cucumber.QueryTest/: Cucumber.QueryTest.csproj  CucumberMessagesEnumConverterFactory.cs  DescriptionEnumConverter.cs  NamingStrategyAcceptanceTest.cs  NdjsonSerializer.cs  QueryTest.cs  (+4 more)
java/: pom.xml
javascript/: .gitignore  .mocharc.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  typedoc.json
ruby/: .rubocop.yml  .rubocop_todo.yml  Gemfile  README.md  cucumber-query.gemspec
testdata/: README.md  attachments.feature.query-results.json  attachments.findMostSevereTestStepResultBy.results.json  attachments.findNameOf.results.json  attachments.findPickleBy.results.json  attachments.findTestCaseBy.results.json  attachments.findTestCaseDurationBy.results.json  attachments.findTestRunFinished.results.json  attachments.findTestStepByTestStepFinished.results.json  attachments.query-results.json  empty.feature.query-results.json  empty.findAllTestCaseStartedGroupedByFeature.results.json  empty.findPickleBy.results.json  empty.findTestCaseBy.results.json  empty.findTestCaseDurationBy.results.json  empty.findTestCaseStartedBy.results.json  examples-tables.feature.naming-strategy.long-exclude-feature-name.txt  examples-tables.feature.naming-strategy.long-with-pickle-name-if-parameterized.txt  examples-tables.feature.naming-strategy.long-with-pickle-name.txt  examples-tables.feature.ndjson  examples-tables.feature.query-results.json  examples-tables.findAllTestCaseStartedGroupedByFeature.results.json  examples-tables.findMostSevereTestStepResultBy.results.json  examples-tables.findPickleBy.results.json  examples-tables.findTestCaseBy.results.json  examples-tables.findTestCaseDurationBy.results.json  examples-tables.query-results.json  hooks.feature.query-results.json  hooks.findAllTestCaseStartedGroupedByFeature.results.json  hooks.findMostSevereTestStepResultBy.results.json  hooks.findNameOf.results.json  hooks.findPickleBy.results.json  hooks.findTestCaseBy.results.json  hooks.findTestCaseDurationBy.results.json  hooks.findTestRunDuration.results.json  hooks.findTestStepByTestStepFinished.results.json  hooks.findUnambiguousStepDefinitionBy.results.json  hooks.query-results.json  minimal.feature.naming-strategy.short.txt  minimal.feature.query-results.json  (+20 more)
(+403 files in other folders)
